Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.28.0
-
None
-
Windows
Description
The bug is a simple race between threads. The necessary context for the connect completion routine should be set before the async connect is initiated, not after. If the completion routine runs ahead of the context setup, the successful connect data is mistaken for a drained completion on a closed connection.