PROTON-2081: Hang in Windows proactor during connect - thread race